--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     
-                    <span class="glyphicon glyphicon-comment"></span> MİLİSİA-İRC
+                    <span class="glyphicon glyphicon-comment"></span> Mİ2A2 - MİLİSİA İŞLEVSEL İRC AĞ ARAYÜZÜ
                     <div class="btn-group pull-right">
                         <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
                             <span class="glyphicon glyphicon-chevron-down"></span>
