--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html xml:lang="tr" lang="tr" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>MILISIA IRC</title>
+<title>Mİ2A2</title>
 <!---
 <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
