--- a/templates/index.html
+++ b/templates/index.html
@@ -159,16 +159,16 @@
                         </button>
                         <ul class="dropdown-menu slidedown">
                             <li><a href="#"><span class="glyphicon glyphicon-refresh">
-                            </span>Refresh</a></li>
+                            </span>Tazele</a></li>
                             <li><a href="#"><span class="glyphicon glyphicon-ok-sign">
-                            </span>Available</a></li>
+                            </span>Müsait</a></li>
                             <li><a href="#"><span class="glyphicon glyphicon-remove">
-                            </span>Busy</a></li>
+                            </span>Meşgul</a></li>
                             <li><a href="#"><span class="glyphicon glyphicon-time"></span>
-                                Away</a></li>
+                                Dışarıda</a></li>
                             <li class="divider"></li>
                             <li><a href="#"><span class="glyphicon glyphicon-off"></span>
-                                Sign Out</a></li>
+                                Kapat</a></li>
                         </ul>
                     </div>
                 </div>
