resim-yukleme.eklenti

--- a/templates/index.html
+++ b/templates/index.html
@@ -254,12 +254,9 @@
 					</div>
 					<div class="input-group">
 						<form id="yukle" method="POST" action="#">
-							<span class="input-group-btn">
-								<span class="btn btn-default btn-file">
-									YÜKLE <input type="file" id="imgInp">	
-								</span>
+							<span class="btn btn-default btn-file">
+								<span class="glyphicon glyphicon-upload">RESMİ BURAYA BIRAKIN</span> <input type="file" id="imgInp">	
 							</span>
-							
 							<input id="yukleislem" name="yukleislem" type="submit" class="hidden btn btn-warning btn-md"  value="yükle">
 						</form>
                     </div>
