resim-gonder.dizayn

--- a/templates/index.html
+++ b/templates/index.html
@@ -243,15 +243,15 @@
 				</div>
                
                 <div class="panel-footer">
-                    
+                    <form id="gonder" method="POST" action="#">
                     <div class="input-group">
-                        <form id="gonder" method="POST" action="#">
-							<input name="gonder_veri" id="gonder_veri" type="text" class="form-control" placeholder="Mesajınızı buraya yazın..." />
-							<span class="input-group-btn">
-							<input type="submit" class="btn btn-warning btn-md" value="Gönder">
-							</span>
-						</form>
+						<input name="gonder_veri" id="gonder_veri" type="text" class="form-control" placeholder="Mesajınızı buraya yazın..." />
+						<span class="input-group-btn">
+						<input type="submit" class="btn btn-warning" value="Gönder">
+						</span>
 					</div>
+					</form>
+					<p>
 					<div class="input-group">
 						<form id="yukle" method="POST" action="#">
 							<span class="btn btn-default btn-file">
